Add GPAS Shared Footer with contact and links

--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -1,1 +1,161 @@
+<!-- GPAS Shared Footer -->
+<div
+  style="
+    position:relative;
+    width:100%;
+    box-sizing:border-box;
+    padding:28px 36px;
+    background-image:url('../photos/footer-board-graffiti.gif');
+    background-repeat:repeat-x;
+    background-position:center top;
+    background-size:auto 140px;
+    font-family:Kalam, Arial, sans-serif;
+    font-size:18px;
+    color:#fff;
+  "
+>
+
+  <!-- Horizontal rail -->
+  <div
+    style="
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:24px;
+      max-width:1200px;
+      margin:0 auto;
+    "
+  >
+
+    <!-- Love text -->
+    <div
+      style="
+        line-height:1.15;
+        font-weight:700;
+        text-shadow:
+          0 1px 0 rgba(0,0,0,0.45),
+          0 2px 0 rgba(0,0,0,0.35),
+          0 3px 0 rgba(0,0,0,0.25),
+          1px 3px 4px rgba(0,0,0,0.45);
+      "
+    >
+      Created with
+      <span style="color:#ff2a2a;">&#9829;</span>
+      for<br>
+      All God’s Children
+    </div>
+
+    <!-- Copyright -->
+    <div
+      style="
+        line-height:1.15;
+        font-weight:700;
+        text-align:center;
+        text-shadow:
+          0 1px 0 rgba(0,0,0,0.45),
+          0 2px 0 rgba(0,0,0,0.35),
+          0 3px 0 rgba(0,0,0,0.25),
+          1px 3px 4px rgba(0,0,0,0.45);
+      "
+    >
+      <span style="color:#ffd800;">&#169;</span>
+      <span id="gpas-year"></span><br>
+      Grandpa John’s Stories
+    </div>
+
+    <!-- Contact -->
+    <a
+      href="/contact.html"
+      style="
+        color:#fff;
+        text-decoration:none;
+        font-weight:700;
+        line-height:1.1;
+        text-align:center;
+        text-shadow:
+          0 1px 0 rgba(0,0,0,0.45),
+          0 2px 0 rgba(0,0,0,0.35),
+          0 3px 0 rgba(0,0,0,0.25),
+          1px 3px 4px rgba(0,0,0,0.45);
+      "
+    >
+      Contact<br>Us
+    </a>
+
+    <!-- Buttons group -->
+    <div
+      style="
+        display:flex;
+        align-items:center;
+        gap:16px;
+      "
+    >
+
+      <!-- Kids -->
+      <a
+        href="https://gpaskids.com"
+        style="
+          padding:10px 18px;
+          border-radius:999px;
+          background:#c65a1e;
+          color:#fff;
+          font-weight:700;
+          text-decoration:none;
+          box-shadow:
+            inset 0 2px 0 rgba(255,255,255,0.35),
+            inset 0 -2px 0 rgba(0,0,0,0.35),
+            0 3px 4px rgba(0,0,0,0.45);
+        "
+      >
+        Gpa’s Kids
+      </a>
+
+      <!-- Faith -->
+      <a
+        href="https://gpasfaith.com"
+        style="
+          padding:10px 18px;
+          border-radius:999px;
+          background:#6b4a8f;
+          color:#fff;
+          font-weight:700;
+          text-decoration:none;
+          box-shadow:
+            inset 0 2px 0 rgba(255,255,255,0.35),
+            inset 0 -2px 0 rgba(0,0,0,0.35),
+            0 3px 4px rgba(0,0,0,0.45);
+        "
+      >
+        Gpa’s Faith
+      </a>
+
+      <!-- Shop -->
+      <a
+        href="https://gpasshop.com"
+        style="
+          padding:10px 18px;
+          border-radius:999px;
+          background:#8b6a3e;
+          color:#fff;
+          font-weight:700;
+          text-decoration:none;
+          box-shadow:
+            inset 0 2px 0 rgba(255,255,255,0.35),
+            inset 0 -2px 0 rgba(0,0,0,0.35),
+            0 3px 4px rgba(0,0,0,0.45);
+        "
+      >
+        Gpa’s Shop
+      </a>
+
+    </div>
+
+  </div>
+
+</div>
+
+<script>
+  const y = document.getElementById('gpas-year');
+  if (y) y.textContent = new Date().getFullYear();
+</script>
 
