Update footer background properties in HTML

--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -6,9 +6,10 @@
     box-sizing:border-box;
     padding:28px 36px;
     background-image:url('../photos/footer-board-graffiti.gif');
-    background-repeat:repeat-x;
+    background-repeat:no-repeat;
     background-position:center top;
-    background-size:auto 140px;
+    background-size:100% 140px;
+
     font-family:Kalam, Arial, sans-serif;
     font-size:18px;
     color:#fff;
