--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -1,4 +1,4 @@
-<!-- GPAS Shared Footer -->
+<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:36 PM-->
 <div
   style="
     position:relative;
@@ -32,7 +32,7 @@
     <div
       style="
         line-height:1.15;
-        font-weight:700;
+        font-weight:600;
         text-shadow:
           0 1px 0 rgba(0,0,0,0.45),
           0 2px 0 rgba(0,0,0,0.35),
@@ -41,7 +41,7 @@
       "
     >
       Created with
-      <span style="color:#ff2a2a;">&#9829;</span>
+      <span style="color:#ff2a2a; font-size:1.3em;">&#9829;</span>
       for<br>
       All God’s Children
     </div>
@@ -50,7 +50,7 @@
     <div
       style="
         line-height:1.15;
-        font-weight:700;
+        font-weight:600;
         text-align:center;
         text-shadow:
           0 1px 0 rgba(0,0,0,0.45),
@@ -70,7 +70,7 @@
       style="
         color:#fff;
         text-decoration:none;
-        font-weight:700;
+        font-weight:600;
         line-height:1.1;
         text-align:center;
         text-shadow:
@@ -94,32 +94,41 @@
 
       <!-- Kids -->
       <a
-        href="https://gpaskids.com"
-        style="
-          padding:10px 18px;
-          border-radius:999px;
-          background:#c65a1e;
-          color:#fff;
-          font-weight:700;
-          text-decoration:none;
-          box-shadow:
-            inset 0 2px 0 rgba(255,255,255,0.35),
-            inset 0 -2px 0 rgba(0,0,0,0.35),
-            0 3px 4px rgba(0,0,0,0.45);
-        "
-      >
-        Gpa’s Kids
-      </a>
+  href="https://gpaskids.com"
+    target="_blank"
+    rel="noopener noreferrer"
+  style="
+    padding:10px 14px;
+    border-radius:999px;
+    background:#c65a1e;
+    color:#fff;
+    font-weight:600;
+    font-size:15px;
+    line-height:1.1;
+    text-decoration:none;
+    text-align:center;
+    box-shadow:
+      inset 0 2px 0 rgba(255,255,255,0.35),
+      inset 0 -2px 0 rgba(0,0,0,0.35),
+      0 3px 4px rgba(0,0,0,0.45);
+  "
+>
+  Gpa’s<br>Kids
+</a>
+
 
       <!-- Faith -->
       <a
         href="https://gpasfaith.com"
+          target="_blank"
+          rel="noopener noreferrer"
         style="
-          padding:10px 18px;
+          padding:10px 14px;
           border-radius:999px;
           background:#6b4a8f;
           color:#fff;
-          font-weight:700;
+          font-weight:600;
+          font-size:15px
           text-decoration:none;
           box-shadow:
             inset 0 2px 0 rgba(255,255,255,0.35),
@@ -127,18 +136,21 @@
             0 3px 4px rgba(0,0,0,0.45);
         "
       >
-        Gpa’s Faith
+        Gpa’s<br>Faith
       </a>
 
       <!-- Shop -->
       <a
         href="https://gpasshop.com"
+          target="_blank"
+          rel="noopener noreferrer"
         style="
-          padding:10px 18px;
+          padding:10px 14px;
           border-radius:999px;
           background:#8b6a3e;
           color:#fff;
-          font-weight:700;
+          font-weight:600;
+          font-size:15px
           text-decoration:none;
           box-shadow:
             inset 0 2px 0 rgba(255,255,255,0.35),
