Update footer last update timestamp and text

--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -1,4 +1,4 @@
-<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:36 PM-->
+<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:44 PM-->
 <div
   style="
     position:relative;
@@ -128,7 +128,7 @@
           background:#6b4a8f;
           color:#fff;
           font-weight:600;
-          font-size:15px
+          font-size:15px;
           text-decoration:none;
           box-shadow:
             inset 0 2px 0 rgba(255,255,255,0.35),
@@ -158,7 +158,7 @@
             0 3px 4px rgba(0,0,0,0.45);
         "
       >
-        Gpa’s Shop
+        Gpa’s<br>Shop
       </a>
 
     </div>
