--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -1,10 +1,10 @@
-<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:44 PM-->
+<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:58 PM-->
 <div
   style="
     position:relative;
     width:100%;
     box-sizing:border-box;
-    padding:28px 36px;
+    padding:14px 36px 18px 36px;
     background-image:url('../photos/footer-board-graffiti.gif');
     background-repeat:no-repeat;
     background-position:center top;
@@ -129,6 +129,8 @@
           color:#fff;
           font-weight:600;
           font-size:15px;
+          line-height:1.1;
+          text-align:center;
           text-decoration:none;
           box-shadow:
             inset 0 2px 0 rgba(255,255,255,0.35),
@@ -150,7 +152,9 @@
           background:#8b6a3e;
           color:#fff;
           font-weight:600;
-          font-size:15px
+          font-size:15px;
+          line-height:1.1;
+          text-align:center;
           text-decoration:none;
           box-shadow:
             inset 0 2px 0 rgba(255,255,255,0.35),
