--- a/pages/gpas-footer.html
+++ b/pages/gpas-footer.html
@@ -1,8 +1,9 @@
-<!-- GPAS Shared Footer -- Last Update 01/31 @ 8:58 PM-->
+<!-- GPAS Shared Footer -- Last Update 02/01 @ 8:21 PM-->
 <div
   style="
     position:relative;
     width:100%;
+    height:110px;
     box-sizing:border-box;
     padding:14px 36px 18px 36px;
     background-image:url('../photos/footer-board-graffiti.gif');
